Resource add and remove label
